--- a/First Proffessional/style.css
+++ b/First Proffessional/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Playfair+Display&family=Poppins:wght@500&display=swap'); url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Poppins:wght@500&display=swap');
 
 html { 
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0,0, 0, 0);
 }
 
 html, body {
@@ -42,18 +42,18 @@ a.navigation-items:hover {
 
 #homepage {
     display: block;
-    width: 100%;
-    font-size: 250px;
+    min-height: 100vh;
+    width: 100%;    
     color: rgb(255, 255, 255);
     text-align: left;
-    background-color: black;
+    background-color: rgb(0, 0, 0);
+    user-select: none;
 }
 
 h1.homepage-title {
-    font-size: calc(25px + 5vw);
+    font-size: calc(25px + 5vw);    
     margin-top: 0px;
     margin-bottom: 0px;
-    user-select: none;
     line-height: calc(100px + 20vh);
     text-shadow: rgb(46, 46, 46) 5px 5px;
     text-align: center;
@@ -66,8 +66,117 @@ h1.homepage-title:active {
     animation: fly-away 2s ease;
 }
 
+#two-description {
+    display: flex;
+    text-align: justify;
+    text-justify: distribute;
+    justify-content: space-between;
+    min-width: 100vw;
+    min-height: 70vh;
+}
+
+.info {
+    display: inline-block;
+    width: 45vw;
+    font-size: calc(10px + 1vw);
+    margin-left: 50px;
+    margin-right: 50px;
+}
+
+#weird-page {
+    background-color: white;
+    font-family: 'Poppins', sans-serif;
+    z-index: -1;
+    user-select: none;
+    min-height: 70vh;
+}
+
+h1.weird-title {
+    color: black;
+    font-size: calc(15px + 5vw);
+    padding-top: 25px;
+    margin: 0px;
+}
+
+#weird-container {
+    display: flex;
+}
+
+.weird-info{
+    font-size: calc(10px + 1vw);
+    text-align: left;
+    max-width: 100vw;
+    float: right;
+    z-index: 2;
+}
+
+#weird-picture {
+    border: 7px solid black;
+    border-radius: 100%;
+    max-width: 20vw;
+    max-height: 20vw;
+    margin-left: 30px;
+}
+
+#newsletter-page {
+    background-color: black;
+    user-select: none;
+    font-family: 'Playfair Display', serif;
+    color: white;
+}
+
+#newsletter-title {
+    font-family:'Times New Roman', Times, serif;
+    padding-top: 25px;
+    padding-right: 20px;
+    font-size: 50px;
+    text-align: right;
+}
+
+.newsletter-content {
+    
+}
+
 
 @keyframes fly-away {
     0%{transform: translateX(0px); }
     100% {transform: translateX(-2000px); }
+}
+
+@media only screen and (max-width: 1000px) {
+    #two-description {
+        display: block;
+        text-align: center;
+    }
+
+    p.info {
+        font-size: calc(15px + 1vw);
+        margin-left: 10px;
+        margin-right: 10px;
+        min-width: 90vw;
+    }
+
+    #weird-page {
+        min-height: max-content;
+        padding-left: 0px;
+    }
+
+    .weird-title {
+        padding: 10px;
+    }
+
+    .weird-info {
+        position: relative;
+        min-height: 30vh;
+        text-align: justify;
+        padding: 10px;
+    }
+
+    #weird-picture {
+        position: absolute;
+        right: 25%;
+        border: 2px black solid;
+        transform:translateY(-70px);
+        height: 20vw;
+    }
 }
