--- a/First Proffessional/style.css
+++ b/First Proffessional/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Playfair+Display&family=Poppins:wght@500&display=swap'); url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Poppins:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Playfair+Display&family=Poppins:wght@500&display=swap');
 
 html { 
     background-color: rgba(0,0, 0, 0);
@@ -89,6 +89,7 @@ h1.homepage-title:active {
     z-index: -1;
     user-select: none;
     min-height: 70vh;
+    pointer-events: none;
 }
 
 h1.weird-title {
@@ -115,7 +116,15 @@ h1.weird-title {
     border-radius: 100%;
     max-width: 20vw;
     max-height: 20vw;
-    margin-left: 30px;
+    margin-right: 30px;
+    transform: translateY(-50px);
+    text-wrap: wrap;
+    pointer-events: auto;
+}
+
+#weird-picture:hover ~ .weird-title{
+    color: yellow;
+    transition-duration: 500ms;
 }
 
 #newsletter-page {
@@ -123,18 +132,65 @@ h1.weird-title {
     user-select: none;
     font-family: 'Playfair Display', serif;
     color: white;
+    min-height: 100vh;
+    overflow-x: hidden  ;
 }
 
 #newsletter-title {
     font-family:'Times New Roman', Times, serif;
+    display: inline-block;
+    padding-right: 50px;
     padding-top: 25px;
-    padding-right: 20px;
+    padding-left: 100px;
     font-size: 50px;
-    text-align: right;
+    text-align: left;
+    border-bottom: 0.5px solid white;
+    text-wrap: nowrap;
+}
+
+#newsletter-title:hover {
+    color: rgb(143, 143, 143);
+}
+
+#newsletter-page:hover #newsletter-title{
+    transition-duration: 500ms;
+    padding-right: 100vw;
+}
+
+#news-container {
+    display: flex;
+    max-width: 70vw;
+    text-align: left;
+    flex-direction: column;
+}
+
+#newsletter-topics {
+    display: flex;
+    font-size: 1vw;
+    text-align: justify;
+    justify-content: space-between;
+    margin-left: 100px;
+    margin-right: 100px;
+    }
+
+a.newsletter-topics-nav {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.75);   
+}
+
+a.newsletter-topics-nav:hover {
+    color: rgb(183, 37, 37);
+    transition-duration: 400ms;
 }
 
 .newsletter-content {
-    
+    font-size: calc(10px + 1vw);
+    padding-top: 50px;
+    padding-left: 15px;
+    padding-right: 15px;
+    text-align: justify;
+    color: rgba(255, 255, 255, 0.75);
+    line-height: 50px;
 }
 
 
@@ -174,9 +230,23 @@ h1.weird-title {
 
     #weird-picture {
         position: absolute;
-        right: 25%;
+        right: 10%;
         border: 2px black solid;
         transform:translateY(-70px);
         height: 20vw;
+        margin-left: 20px;
+    }
+
+    #newsletter-title {
+        padding-left: 0px;
+        font-size: 10vw;
+        text-align: center;
+        display: block;
+        padding: 0px;
+    }
+
+    a.newsletter-topics-nav {
+        font-size: 2vw;
+        padding-bottom: 10px;
     }
 }
