--- a/First Proffessional/style.css
+++ b/First Proffessional/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Playfair+Display&family=Poppins:wght@500&display=swap');
 
 html { 
-    background-color: rgba(0,0, 0, 0);
+    background-color: rgba(0,0, 0, 1);
 }
 
 html, body {
@@ -64,10 +64,9 @@ h1.homepage-title {
     transition-timing-function:ease-out;
 }
 
-h1.homepage-title:active {
-    transition-duration: 5000ms;
-    transition-delay: 500ms;
-    animation: fly-away 2s ease;    }
+h1.homepage-title:hover {
+    transform: perspective( 600px ) rotateY( 180deg );
+}
 
 #two-description {
     display: flex;
@@ -167,6 +166,7 @@ transition-duration: 1000ms;
     color: white;
     min-height: 100vh;
     overflow-x: hidden;
+    border-bottom: 0.5px solid white;
 }
 
 #newsletter-title {
@@ -275,6 +275,63 @@ a.newsletter-topics-nav:hover {
     border-bottom: 0.5px solid white;
 }
 
+#picturesque {
+    /* background-image: url(https://raw.githubusercontent.com/Lavertsss/Assets/main/stevenbrule.png);
+    position: absolute;
+    background-repeat: no-repeat;
+    background-size: cover;     */
+    height: 100vh;
+    width: 100vw;
+ 
+}
+
+#options-container {
+    position: relative;
+    display: flex;
+    background-color: black;
+}
+
+#picture-option-1 {
+    display: inline-block;
+    min-width: 50vw;
+    min-height: 100vh;
+    background-color: yellow;
+    font-size: 100px;
+    transition-duration: 500ms;
+}
+
+#picture-option-2 {
+    display: inline-block;
+    min-width: 50vw;
+    min-height: 100vh;
+    background-color: yellow;
+    font-size: 100px;
+    transition-duration: 500ms;
+}
+
+.option-1-text {
+    display: block;
+    text-align: center;
+    line-height: 100vh;
+}
+
+.option-2-text {
+    display: block;
+    text-align: center;
+    line-height: 100vh;
+}
+
+#picture-option-1:hover {
+    transform: perspective( 20000px ) rotateY( -25deg );
+    transition-duration: 1000ms;
+    transition-delay: 150ms;
+}
+
+#picture-option-2:hover {
+    transform: perspective( 20000px ) rotateY( 25deg );
+    transition-duration: 1000ms;
+    transition-delay: 150ms;
+}
 
 @keyframes fly-away {
     0%{transform: translateX(0px); }
@@ -378,4 +435,27 @@ a.newsletter-topics-nav:hover {
         text-wrap: wrap;
         text-align: left;
     }
+
+    #options-container {
+        display: block;
+    }
+
+    #picture-option-1 {
+        display: block;
+        min-height: 50vh;
+    }
+
+    #picture-option-2 {
+        display: block;
+        min-height: 50vh;
+    }
+
+    .option-1-text {
+        line-height: 50vh;
+    }
+
+    .option-2-text{
+        line-height: 50vh;
+    }
+
 }
