--- a/First Proffessional/style.css
+++ b/First Proffessional/style.css
@@ -36,6 +36,7 @@ a.navigation-items {
     border-radius: 1px;
     padding-left: 10px;
     padding-right: 10px;
+    
 }
 
 a.navigation-items:hover {
@@ -62,6 +63,7 @@ h1.homepage-title {
     text-align: center;
     transition-duration: 1000ms;
     transition-timing-function:ease-out;
+    user-select: none
 }
 
 h1.homepage-title:hover {
@@ -129,6 +131,7 @@ h1.homepage-title:hover {
     max-width: 100vw;
     float: right;
     z-index: 1;
+    margin-left: 20px;
 }
 
 #weird-picture {
@@ -186,8 +189,9 @@ transition-duration: 1000ms;
 }
 
 #newsletter-page:hover #newsletter-title{
-    transition-duration: 500ms;
+    transition-duration: 1250ms;
     padding-right: 100vw;
+    transition-timing-function: ease-in;
 }
 
 #news-wrapper {
@@ -264,15 +268,14 @@ a.newsletter-topics-nav:hover {
 }
 
 .newsletter-content {
-    font-size: calc(10px + .5vw);
+    font-size: 3vh;
     padding-top: 50px;
     padding-left: 30px;
     padding-right: 30px;
     text-align: justify;
     color: rgba(255, 255, 255, 0.75);
-    line-height: 50px;
+    line-height: auto;
     border-top: 0.5px solid white;
-    border-bottom: 0.5px solid white;
 }
 
 #magazine-page {
@@ -304,16 +307,25 @@ a.newsletter-topics-nav:hover {
     max-width: 20vw;
     margin-left: 10vw;
     text-align: left;
+    font-size: 1vw;
+    margin-bottom: 1vh;
+    transition-duration: 100ms;
+}
+
+#magazine-text-wrapper:hover {
+    transition-duration: 500ms;
+    transform: scale(1.15);
 }
 
 .magazine-subtitle {
     color: yellow;
     font-weight: bold;
+    margin-bottom: 0.5vw;
+    
 }
 
 .magazine-subtitle-text {
     margin-top: 0px;
-    margin-bottom: 25px;
     color: white;
     font-weight: normal;
 }
@@ -322,22 +334,60 @@ a.newsletter-topics-nav:hover {
     display: block;
     position: absolute;
     background-color: rgba(0, 0, 0, 0.541);
-    height: 10vh;
-    max-height: 10vh;
+    height: 20vh;
     width: 100vw;
     bottom: 0px;
+    transition-duration: 100ms;
 }
+
+#footer-section:hover {
+    background-color: rgba(0, 0, 0, 0.788);
+    transition-duration: 500ms;
+}
+
+.footer-text {
+    color: white;
+    text-align: left;
+    max-width: 70vw;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: justify;
+    text-align-last: center;
+    width: 100%;
+    font-size: 2vh;
+}
+
+
 
 @media only screen and (max-width:600px) {
 
+.homepage-title {
+    user-select: none
+}
+
+.newsletter-content {
+    font-size: 2.25vw;
+}
 
 #magazine-text-wrapper {
-    max-width: 100vw;
+    max-width: 30vw;
+    font-size: 2vw;
+    margin-left: 2.5vw;
+    margin-bottom: 4vh;
 }
 
 .magazine-title {
     font-size: 15vw;
+    margin-bottom: 8vh;
 }
+
+.footer-text {
+    font-size: 2.5vw;
+    max-width: 90vw;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 }
 
 @media only screen and (max-width: 1000px) {
@@ -372,6 +422,7 @@ a.newsletter-topics-nav:hover {
         min-height: 30vh;
         text-align: justify;
         padding: 10px;
+        margin-left: 0px;
     }
 
     #weird-picture {
