--- a/First Proffessional/style.css
+++ b/First Proffessional/style.css
@@ -61,13 +61,13 @@ h1.homepage-title {
     line-height: calc(100px + 20vh);
     text-shadow: rgb(46, 46, 46) 5px 5px;
     text-align: center;
-    transition-duration: 1000ms;
+    transition-duration: 2500ms;
     transition-timing-function:ease-out;
     user-select: none
 }
 
 h1.homepage-title:hover {
-    transform: perspective( 400px ) rotateY( 180deg );
+    transform: perspective( 900px ) rotateY( 360deg );
 }
 
 #two-description {
@@ -104,6 +104,7 @@ h1.homepage-title:hover {
     display: inline-flex;
 }
 
+
 .weird-title-d {
     color: black;
     font-size: calc(15px + 5vw);
@@ -123,10 +124,19 @@ h1.homepage-title:hover {
 
 #weird-container {
     display: flex;
+    width: 100%;
+    border-bottom: 7px solid rgb(0, 0, 0);
+}
+
+#weird-title-container:hover {
+    transition-duration: 500ms;
+    transition-timing-function: ease-out;
+    animation: d-shake 1000ms;
+    animation-delay: 500ms;
 }
 
 .weird-info{
-    font-size: calc(10px + 1vw);
+    font-size: 4vh;
     text-align:start;
     max-width: 100vw;
     float: right;
@@ -137,17 +147,18 @@ h1.homepage-title:hover {
 #weird-picture {
     border: 7px solid black;
     border-radius: 100%;
-    max-width: 20vw;
-    max-height: 20vw;
+    width: 20vw;
+    height: 20vw;
     margin-right: 30px;
-    transform: translateY(-50px);
     text-wrap: wrap;
     user-select: auto;
     color: white;
     opacity: 1;
     filter: grayscale(1);
     position: relative;
-    display: flex;
+    display: block;
+    margin-top: auto;
+    margin-bottom: auto;
     float: right;
     transition-duration: 250ms;
 }
@@ -170,6 +181,9 @@ transition-duration: 1000ms;
     min-height: 100vh;
     overflow-x: hidden;
     border-bottom: 0.5px solid white;
+    border-top: 0.5px solid white;
+    border-right: 0.5px solid white;
+    border-left: 0.5px solid white;
 }
 
 #newsletter-title {
@@ -182,6 +196,7 @@ transition-duration: 1000ms;
     text-align: left;
     border-bottom: 0.5px solid white;
     text-wrap: nowrap;
+    padding-top: 5px;
 }
 
 #newsletter-title:hover {
@@ -246,7 +261,12 @@ transition-duration: 1000ms;
     height: max-content;
     width: 20vw;
     margin-bottom: 10px;
+    transition-duration: 250ms;
 }
+
+ .sidebar-picture:hover {
+    filter: saturate(1.75);
+ }
 
 #newsletter-topics {
     display: flex;
@@ -284,6 +304,7 @@ a.newsletter-topics-nav:hover {
     display: block;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     position: relative;
+    user-select: none;
 }
 
 #magazine-title-wrapper {
@@ -294,11 +315,23 @@ a.newsletter-topics-nav:hover {
     margin-right: auto;
     font-weight: bold;
     text-wrap: nowrap;
+    transition-duration: 200ms;
+}
+
+#magazine-title-wrapper:hover {
+    transform: scale(1.05);    
+    transition-duration: 250ms;
 }
 
 .magazine-title {
     text-align: center;
     font-size: 5vw;
+    transition-duration: 300ms;
+}
+
+.magazine-title:hover {
+    text-shadow: -7px 7px  black;
+    animation: title-rotate infinite linear 250ms;
 }
 
 #magazine-text-wrapper {
@@ -309,12 +342,13 @@ a.newsletter-topics-nav:hover {
     text-align: left;
     font-size: 1vw;
     margin-bottom: 1vh;
-    transition-duration: 100ms;
+    transition-duration: 250ms;
 }
 
 #magazine-text-wrapper:hover {
     transition-duration: 500ms;
-    transform: scale(1.15);
+    transform: scale(1.10);
+    text-shadow: 2px 2px black;
 }
 
 .magazine-subtitle {
@@ -423,6 +457,7 @@ a.newsletter-topics-nav:hover {
         text-align: justify;
         padding: 10px;
         margin-left: 0px;
+        font-size: 4vw;
     }
 
     #weird-picture {
@@ -458,6 +493,7 @@ a.newsletter-topics-nav:hover {
         margin-right: 0px ;
         padding-right: 70vw;
         text-wrap: nowrap;
+        display: block;
     }
 
     .newsletter-content {
@@ -516,6 +552,15 @@ a.newsletter-topics-nav:hover {
     0%{transform: translateY(0px); }
     55%{transform: translateY(-10px);}
     75%{transform: translateY(20px);}
+}
+
+@keyframes title-rotate {
+    0% {transform: rotate(0deg);}
+    20%{transform: rotate(-1deg);}
+    25% {transform: rotate(-2deg);}
+    50% {transform: rotate(0deg);}
+    70%{transform: rotate(1deg);}
+    75% {transform: rotate(2deg);}
 }
 /* #picturesque {
     background-image: url(https://raw.githubusercontent.com/Lavertsss/Assets/main/stevenbrule.png);
