--- a/First Proffessional/style.css
+++ b/First Proffessional/style.css
@@ -316,6 +316,8 @@ a.newsletter-topics-nav:hover {
     font-weight: bold;
     text-wrap: nowrap;
     transition-duration: 200ms;
+    z-index: 1;
+    position: relative;
 }
 
 #magazine-title-wrapper:hover {
@@ -327,6 +329,8 @@ a.newsletter-topics-nav:hover {
     text-align: center;
     font-size: 5vw;
     transition-duration: 300ms;
+    margin-bottom: 2vh;
+    
 }
 
 .magazine-title:hover {
@@ -340,15 +344,18 @@ a.newsletter-topics-nav:hover {
     max-width: 20vw;
     margin-left: 10vw;
     text-align: left;
-    font-size: 1vw;
+    font-size: 1.65vh;
     margin-bottom: 1vh;
     transition-duration: 250ms;
+    z-index: 1;
+    position: relative;
 }
 
 #magazine-text-wrapper:hover {
     transition-duration: 500ms;
     transform: scale(1.10);
     text-shadow: 2px 2px black;
+    z-index: 1;
 }
 
 .magazine-subtitle {
@@ -367,17 +374,19 @@ a.newsletter-topics-nav:hover {
 #footer-section {
     display: block;
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.541);
+    background-color: rgba(0, 0, 0, 0.75);
     height: 20vh;
     width: 100vw;
     bottom: 0px;
-    transition-duration: 100ms;
+    transition-duration: 250ms;
+    z-index: 1;
 }
 
 #footer-section:hover {
-    background-color: rgba(0, 0, 0, 0.788);
+    background-color: rgba(0, 0, 0, 0.858);
     transition-duration: 500ms;
 }
+
 
 .footer-text {
     color: white;
@@ -391,6 +400,21 @@ a.newsletter-topics-nav:hover {
     font-size: 2vh;
 }
 
+#magazine-main-image {
+    height: 100vh;
+    position: absolute;
+    right: 25%;
+    left: 25%;
+    bottom: 0%;
+    max-width: 50vw;
+    display: flex;
+    width: 75vh;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 0;
+    filter: grayscale(1);
+
+}
 
 
 @media only screen and (max-width:600px) {
@@ -405,7 +429,7 @@ a.newsletter-topics-nav:hover {
 
 #magazine-text-wrapper {
     max-width: 30vw;
-    font-size: 2vw;
+    font-size: 20vh;
     margin-left: 2.5vw;
     margin-bottom: 4vh;
 }
@@ -420,6 +444,15 @@ a.newsletter-topics-nav:hover {
     max-width: 90vw;
     margin-left: auto;
     margin-right: auto;
+}
+
+#magazine-main-image {
+    width: 100vw;
+    left: 0%;
+    right: 0%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100vw;
 }
 
 }
@@ -539,6 +572,10 @@ a.newsletter-topics-nav:hover {
 
     .option-2-text{
         line-height: 50vh;
+    }
+
+    #magazine-text-wrapper {
+        font-size: 1.8vw;
     }
 
 }
