--- a/First Proffessional/style.css
+++ b/First Proffessional/style.css
@@ -335,7 +335,7 @@ a.newsletter-topics-nav:hover {
 
 .magazine-title:hover {
     text-shadow: -7px 7px  black;
-    animation: title-rotate infinite linear 250ms;
+    /* animation: title-rotate infinite linear 250ms; */
 }
 
 #magazine-text-wrapper {
@@ -344,8 +344,8 @@ a.newsletter-topics-nav:hover {
     max-width: 20vw;
     margin-left: 10vw;
     text-align: left;
-    font-size: 1.65vh;
-    margin-bottom: 1vh;
+    font-size: 1.25vh;
+    margin-bottom: 0vh;
     transition-duration: 250ms;
     z-index: 1;
     position: relative;
@@ -358,10 +358,34 @@ a.newsletter-topics-nav:hover {
     z-index: 1;
 }
 
+#magazine-text-wrapper-right {
+    display:flex;
+    flex-direction: column;
+    max-width: 20vw;
+    margin-right: 10vw;
+    margin-left: auto;
+    text-align: right;
+    font-size: 1.25vh;
+    margin-bottom: 0vh;
+    transition-duration: 250ms;
+    z-index: 1;
+    position: relative;
+    align-content: flex-end;
+    flex-wrap: nowrap;
+}
+
+#magazine-text-wrapper-right:hover {
+    transition-duration: 500ms;
+    transform:scale(1.10);
+    text-shadow: 2px 2px black;
+    z-index: 1;}
+
 .magazine-subtitle {
     color: yellow;
     font-weight: bold;
-    margin-bottom: 0.5vw;
+    margin-bottom: auto;
+    margin-top: auto;
+    transition-duration: 250ms;
     
 }
 
@@ -371,11 +395,64 @@ a.newsletter-topics-nav:hover {
     font-weight: normal;
 }
 
+#magazine-text-wrapper-opaque {
+    display:flex;
+    flex-direction: column;
+    max-width: 20vw;
+    text-align: right;
+    font-size: 1.65vh;
+    margin-bottom: 1vh;
+    margin-top: 1vh;
+    transition-duration: 250ms;
+    z-index: 1;
+    position: relative;
+    background-color:rgba(0, 0, 0, 0.53);
+    border-radius: 5px;
+    font-style: italic;
+    padding-right: 1vw;
+}
+
+#magazine-text-wrapper-opaque:hover {
+    padding-left: 10vw;
+}
+
+#magazine-text-wrapper-opaque:hover .magazine-subtitle{
+    color: rgb(255, 255, 86);
+}
+
+#magazine-text-wrapper-opaque-right {
+    display:flex;
+    flex-direction: column;
+    max-width: 20vw;
+    text-align: left;
+    font-size: 1.65vh;
+    margin-bottom: 1vh;
+    margin-top: 1vh;
+    transition-duration: 250ms;
+    z-index: 1;
+    position: relative;
+    background-color:rgba(0, 0, 0, 0.53);
+    border-radius: 5px;
+    font-style: italic;
+    padding-left: 1vw;
+    align-content: flex-end;
+    margin-right: 0vw;
+    margin-left: auto;
+}
+
+#magazine-text-wrapper-opaque-right:hover {
+    padding-right: 10vw;
+}
+
+#magazine-text-wrapper-opaque-right:hover .magazine-subtitle{
+    color: rgb(255, 255, 86);
+}
+
 #footer-section {
     display: block;
     position: absolute;
     background-color: rgba(0, 0, 0, 0.75);
-    height: 20vh;
+    height: max-content ;
     width: 100vw;
     bottom: 0px;
     transition-duration: 250ms;
@@ -412,8 +489,7 @@ a.newsletter-topics-nav:hover {
     margin-left: auto;
     margin-right: auto;
     z-index: 0;
-    filter: grayscale(1);
-
+    filter: grayscale(2);
 }
 
 
@@ -428,10 +504,17 @@ a.newsletter-topics-nav:hover {
 }
 
 #magazine-text-wrapper {
-    max-width: 30vw;
+    max-width: 40vw;
     font-size: 20vh;
     margin-left: 2.5vw;
-    margin-bottom: 4vh;
+    margin-bottom: 2vh;
+}
+
+#magazine-text-wrapper-right {
+    max-width: 40vw;
+    font-size: 20vh;
+    margin-right: 2.5vw;
+    margin-bottom: 2vh;
 }
 
 .magazine-title {
@@ -455,6 +538,17 @@ a.newsletter-topics-nav:hover {
     max-width: 100vw;
 }
 
+#magazine-text-wrapper-opaque {
+    display: inline-block;
+    font-size: 1.8vw; 
+    padding-left: 10vw; 
+    max-width: 35vw;
+}
+
+#magazine-text-wrapper-opaque-right {        
+    font-size: 1.8vw;
+    max-width: 35vw;
+}
 }
 
 @media only screen and (max-width: 1000px) {
@@ -575,6 +669,10 @@ a.newsletter-topics-nav:hover {
     }
 
     #magazine-text-wrapper {
+        font-size: 1.8vw;
+    }
+
+    #magazine-text-wrapper-right {
         font-size: 1.8vw;
     }
 
