--- a/First Proffessional/style.css
+++ b/First Proffessional/style.css
@@ -510,6 +510,18 @@ a.newsletter-topics-nav:hover {
     margin-bottom: 2vh;
 }
 
+#magazine-text-wrapper:hover {
+    transition-duration: 500ms;
+    transform:scale(1.10);
+    text-shadow: 0px 0px black;
+}
+
+#magazine-text-wrapper-right:hover {
+    transition-duration: 500ms;
+    transform:scale(1.10);
+    text-shadow: 0px 0px black;
+}
+
 #magazine-text-wrapper-right {
     max-width: 40vw;
     font-size: 20vh;
@@ -536,6 +548,7 @@ a.newsletter-topics-nav:hover {
     margin-left: auto;
     margin-right: auto;
     max-width: 100vw;
+    height: 90vh;
 }
 
 #magazine-text-wrapper-opaque {
