--- a/J & J/style.css
+++ b/J & J/style.css
@@ -1,14 +1,155 @@
+/* font-family: 'Inter', sans-serif;
+font-family: 'Work Sans', sans-serif; */
+
 html {
-    background-color: white;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Work Sans', sans-serif;
+    /* border: 2rem rgb(224, 72, 173) solid; 
+    border-radius: 5rem; */
+    /* background: linear-gradient(black, purple, pink) */
 }
 
 body {
     scroll-behavior: smooth;
+    margin: 0 0;
+    
 }
 
+
+/* Navigation Bar */
+#nav-wrapper {
+    display: flex;
+    position: relative;
+    padding-top: min(1rem + 1vh);
+}
+
+.nav-container {
+    display: flex;
+    gap: 4rem;
+    flex: 1;
+}
+
+.nav-left {
+    justify-content: flex-start;
+    margin-left: min(20px + 1vw);
+}
+
+.nav-right {
+    justify-content: flex-end;
+    margin-right: 20px;
+}
+
+.nav-items {
+    font-size: min(2rem + 0.25vw);
+    color: rgb(255, 255, 255);
+    font-weight: 800;
+    font-style: bold;
+    text-decoration: none;
+    border-bottom: 5px solid transparent;
+}
+
+.nav-items:hover {
+    border-bottom: 5px solid rgb(255, 255, 255);
+    transition-duration: 200ms;
+    overflow: hidden;
+}
+
+.title {
+    color: rgb(255, 255, 255);
+    border-bottom: none;
+}
+
+.title:hover{
+    border: none;
+}
+
+.title-color {
+    color: black;
+}
+
+.consultation {
+    padding: 5px 5px;
+    border: solid black 5px;
+    border-top-left-radius: 100px;
+    border-top-right-radius: 100px;   
+    border-bottom-left-radius: 100px;   
+    border-bottom-right-radius: 100px;  
+    background-color: black;
+    align-items: center;
+}
+
+.consultation:hover{
+    border-bottom: 5px solid rgb(0, 0, 0);
+    transition-duration: 200ms;
+    overflow: hidden;
+}
+
+/* Section 1 */
+.section-1 {
+    position: relative;
+    background-color: rgb(248, 103, 176);
+}
+
+#homepage {
+    min-height: min-content;
+    margin-top: 1rem + 1vh;
+    padding-bottom: 20rem;
+}
+
+/* Border */
+.custom-border {
+    bottom: 1rem;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+}
+
+.custom-border svg {
+    position: relative;
+    display: block;
+    width: calc(100% + 1.3px);
+    height: 320px;
+}
+
+.custom-border .shape-fill {
+    fill: #FFFFFF;
+}
+
+/* Section 2 */
+
+.section-2 {
+    position: relative;
+    background: white;
+}
+
+.header {
+    display: flex; 
+    position: relative;
+    gap: 0rem;
+    flex-direction: column;
+    padding-top: 10rem;
+    padding-left: 10rem;
+    width: 60vw;
+}
+
+.header-title {
+    font-size: min(4rem + 0.25vw);
+    font-weight: 800;
+    font-style: bold;
+}
+
+.header-text {
+    font-size: min(3rem + 0.25vw);
+    font-weight: 800;
+    font-style: bold;
+    color: white;
+    line-height: 0;
+}
+
+
 /* NAVIGATION BAR */
-#navigation-wrapper {
+/* #navigation-wrapper {
     position: relative;
     display: flex;
     margin-top: 3rem;
@@ -35,4 +176,5 @@ body {
 .navigation-items {
     font-size: clamp(1rem, 1vw, 1.5rem);
     padding: 1em 0;
-}
+} */
+
