--- a/J & J/style.css
+++ b/J & J/style.css
@@ -132,7 +132,6 @@ body {
     font-size: min(.75rem + 2vw);
     font-weight: 800;
     font-style: bold;
-    white-space: nowrap;
     margin: 0px 0px;
 }
 
@@ -194,30 +193,40 @@ body {
     background: rgb(255, 255, 255);
     padding-bottom: 0rem;
     transition-duration: 100ms;
+    min-height: 75vh;
+}
+
+.introductions {
+    max-width: 90vw;
+    display: block;
+    margin: auto;
+    text-align: center;
 }
 
 .intro-transition {
     animation-name: into-visible;
     animation-duration: 3000ms;
-    -webkit-animation-delay: 6s;
-    -moz-animation-delay: 6s;
-    -ms-animation-delay: 6s;
-    -o-animation-delay: 6s;
-    animation-delay: 6s;
+    -webkit-animation-delay: 3s;
+    -moz-animation-delay: 3s;
+    -ms-animation-delay: 3s;
+    -o-animation-delay: 3s;
+    animation-delay: 3s;
     opacity: 0;
     animation-fill-mode: forwards;  
 }
 
 .introductions .header-title{
     display: flex;
-    padding-left: calc(min(4rem + 3vw));
+    text-align: center;
+    /* padding-left: calc(min(4rem + 3vw)); */
     transition-duration: 300ms;
     animation: d-shake 3000ms ease-out infinite;
-    -webkit-animation-delay: 6s;
-    -moz-animation-delay: 6s;
-    -ms-animation-delay: 6s;
-    -o-animation-delay: 6s;
-    animation-delay: 6s;
+    -webkit-animation-delay: 3s;
+    -moz-animation-delay: 3s;
+    -ms-animation-delay: 3s;
+    -o-animation-delay: 3s;
+    animation-delay: 3s;
+    justify-content: center;
 }
 
 /* .section-2:hover .introductions .header-title {
@@ -313,9 +322,8 @@ body {
 
     .header-title {
         white-space: wrap;
-        margin: 30px 10px;
-        text-align: center;
-        
+        margin: 30px 10px;   
+        font-size: min(1rem + 3vw);     
     }
 
     .header-text {
@@ -331,18 +339,21 @@ body {
 
     }
 
-    .introductions {
-        width: min-content;
-        height: 200vh;
-        transition-duration: 300ms;
-        transition-timing-function: ease-out;
-        animation: d-shake 3000ms;
-        animation-iteration-count: infinite;
-        animation-delay: 5000ms;
+    .introductions .header-title {
+        font-size: min(1rem + 3vw);
     }
-    .introductions .header-title{
-    animation: into-visible 3000ms ease-out ;
-    animation-delay: 7000ms;
-}
+
+    /* .introductions .header-title{
+        display: flex;
+        text-align: center; */
+        /* padding-left: calc(min(4rem + 3vw)); */
+        /* transition-duration: 300ms;
+        animation: d-shake 3000ms ease-out infinite;
+        -webkit-animation-delay: 3s;
+        -moz-animation-delay: 3s;
+        -ms-animation-delay: 3s;
+        -o-animation-delay: 3s;
+        animation-delay: 3s; 
+    }*/
 
 }
