--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -27,7 +27,7 @@ body {
 .body-flex {
   display: flex;
   border-left: 4px solid black;
-  height: min-content;
+  height: 0px;
   margin-top: 5vh;
 }
 
@@ -116,7 +116,6 @@ body {
   flex: 1;
   height: 100%;
   align-items: center;
-  transition-duration: 300ms;
 }
 
 .section-wrapper {
@@ -132,6 +131,8 @@ body {
   white-space: nowrap;
   line-height: 0px;
   margin-bottom: 3.5vh;
+  transition-duration: 500ms;
+  transition-timing-function: ease-in;
 }
 
 .subtitle {
@@ -147,42 +148,51 @@ body {
   font-size: min(3rem, 1.5vw);
   padding-left: 10px;
   margin: 0px;
+  transform: translateX(-101%);
 }
 
 p.body {
-  animation: body-disappear 1500ms ease-in 2000ms 1 forwards;
+  animation: body-appear 3000ms cubic-bezier(0.39, 0.575, 0.565, 1) 1250ms 1
+    forwards;
 }
-
+/* cubic-bezier(0.39, 0.575, 0.565, 1) */
 .body-flex {
-  animation: border-disappear 1000ms linear 3500ms 1 forwards;
+  animation: border-appear 1500ms ease-in 1 forwards;
+  align-items: center;
+  text-align: justify;
 }
 
-/* .section-wrapper:hover */
-
-@keyframes border-disappear {
+@keyframes body-appear {
   0% {
-    height: max-content;
   }
 
-  1% {
-    height: 175px;
+  90% {
+    transform: translateX(1%);
+  }
+
+  100% {
+    transform: translateX(0%);
+  }
+}
+
+@keyframes border-appear {
+  0% {
+    height: 0px;
+    border-left-color: rgb(255, 255, 255);
   }
 
   50% {
     height: 100px;
   }
 
-  100% {
-    border-left-color: white;
-    height: 0px;
+  99% {
+    height: 13vh;
+    border-left-color: rgb(0, 0, 0);
   }
-}
 
-@keyframes body-disappear {
-  0% {
-  }
   100% {
-    transform: translateX(-100%);
+    height: min-content;
+    border-left-color: rgb(0, 0, 0);
   }
 }
 
