--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -37,17 +37,10 @@ body {
   writing-mode: sideways-lr;
   position: absolute;
   right: 0px;
-  bottom: 20px;
+  bottom: -15%;
   font-weight: 400;
   font-size: min(3rem, 1vw);
   width: 1px;
-}
-
-#blob {
-  max-width: 500px;
-  max-height: 500px;
-  margin: auto;
-  z-index: 2;
 }
 
 .material-symbols-outlined {
@@ -60,22 +53,13 @@ body {
 
 @keyframes bob-feature {
   0% {
-    transform: translateY(5px);
+    transform: translateY(-1px);
   }
   50% {
-    transform: translateY(3px);
+    transform: translateY(1px);
   }
   100% {
-    transform: translateY(5px);
-  }
-}
-
-@keyframes slide-in {
-  0% {
-    transform: translateX(0%);
-  }
-  100% {
-    transform: translateX(-100%);
+    transform: translateY(-1px);
   }
 }
 
@@ -116,10 +100,11 @@ body {
   flex: 1;
   height: 100%;
   align-items: center;
+  position: relative;
 }
 
 .section-wrapper {
-  padding-top: 15vh;
+  padding-top: 12vh;
   flex: 1;
   overflow: hidden;
 }
@@ -143,23 +128,66 @@ body {
   color: rgb(82, 82, 82);
 }
 
+.body-flex {
+  align-items: center;
+  animation: border-appear, border-disappear;
+  animation-duration: 1500ms, 1500ms;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in;
+  animation-fill-mode: forwards;
+  animation-delay: 500ms, 16600ms;
+}
+
+@keyframes border-appear {
+  0% {
+    height: 0px;
+    border-left-color: rgb(255, 255, 255);
+  }
+
+  99% {
+    height: 13vh;
+    border-left-color: rgb(0, 0, 0);
+  }
+
+  100% {
+    height: min-content;
+    border-left-color: rgb(0, 0, 0);
+  }
+}
+
+@keyframes border-disappear {
+  0% {
+    height: min-content;
+    border-left-color: rgb(0, 0, 0);
+  }
+
+  1% {
+    height: 13vh;
+    border-left-color: rgb(0, 0, 0);
+  }
+
+  100% {
+    height: 1px;
+    border-left-color: rgb(255, 255, 255);
+  }
+}
+
 .body {
   font-weight: 400;
   font-size: min(3rem, 1.5vw);
   padding-left: 10px;
   margin: 0px;
+  margin-right: 20px;
   transform: translateX(-101%);
 }
 
 p.body {
-  animation: body-appear 3000ms cubic-bezier(0.39, 0.575, 0.565, 1) 1250ms 1
-    forwards;
-}
-/* cubic-bezier(0.39, 0.575, 0.565, 1) */
-.body-flex {
-  animation: border-appear 1500ms ease-in 1 forwards;
-  align-items: center;
-  text-align: justify;
+  animation: body-appear, body-disappear;
+  animation-duration: 3000ms, 3000ms;
+  animation-iteration-count: 1;
+  animation-timing-function: cubic-bezier(0.39, 0.575, 0.565, 1);
+  animation-fill-mode: forwards;
+  animation-delay: 1750ms, 15000ms;
 }
 
 @keyframes body-appear {
@@ -175,26 +203,31 @@ p.body {
   }
 }
 
-@keyframes border-appear {
+@keyframes body-disappear {
   0% {
-    height: 0px;
-    border-left-color: rgb(255, 255, 255);
   }
 
-  50% {
-    height: 100px;
+  10% {
+    transform: translateX(1%);
   }
 
-  99% {
-    height: 13vh;
-    border-left-color: rgb(0, 0, 0);
+  90% {
+    transform: translateX(-99%);
   }
 
   100% {
-    height: min-content;
-    border-left-color: rgb(0, 0, 0);
+    transform: translateX(-100%);
   }
 }
+
+#blob {
+  max-width: 500px;
+  max-height: 500px;
+  margin: auto;
+}
+
+/* animation: border-appear 1500ms ease-in 1 forwards;
+  animation: body-appear 3000ms cubic-bezier(0.39, 0.575, 0.565, 1) 1250ms 1 forwards; */
 
 /* Section 2 */
 .section-2 {
